--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact Support</title>
+<title>Política de Privacidad</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -71,8 +71,69 @@ footer {
 </head>
 <body>
 
-<h2>Contacto de soporte</h2>
-<p>Any issue or doubt don't hessitate to contact us at alkuanimations@gmail.com</b></p>
+<h2>Política de Privacidad</h2>
+<p>Alku Animations provee esta Política de Privacidad para explicar como utiliza, recolecta o guarda la información del usuario en aplicaciones desarrolladas por Alku. Alku Animations respeta la privacidad de sus usuarios y está comprometido con cuidar tal información. A continuación informamos sobre <b>los tipos de información que recolectamos y como la recolectamos</b></p>
+
+<p><b>
+Información personal
+</b>
+</p>
+<p>
+Alku Animations no recolecta ninguna clase de información personal como identificadores de anuncios de Google o Apple.
+Alku Animations no integra ningún SDK que permita publicitar contenido a sus usuarios, ni que permita analizar el uso de sus aplicaciones o que permita administrar cuentas.
+Alku Animations no recolecta información como dirección o direcciones ip del usuario.
+</p>
+
+<p><b>
+Información no personal
+</b>
+</p>
+
+<p>
+Alku Animations no recolecta ninguna información técnica para mejorar nuestros servicios.
+</p>
+
+<p><b>
+Niños
+</b>
+</p>
+
+<p>
+Explícitamente en esta sección notificamos que la información de niños menores de 13 años no es recolectada, ni guardada ni utilizada.
+</p>
+
+<p><b>
+Seguridad
+</b>
+</p>
+
+<p>
+La aplicación almacena localmente datos únicamente relacionados con el juego, no datos personales ni técnicos por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
+</p>
+  
+<p><b>
+SDK Partners
+</b>
+</p>
+
+<p>
+En está sección se declara que la aplicación utiliza el SDK de Facebook con el único fin de obtener las métricas de descargas realizadas a través de Facebook.
+</p>
+
+<p><b>
+Cambios de esta política de privacidad
+</b>
+</p>
+
+<p>
+Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 13/10/2020.
+</p>
+
+<p><b>
+Información de Contacto para esta Política de Privacidad
+</b>
+</p>
+
 
 <p>
 Si tienes alguna pregunta acerca de nuestra política de Privacidad no dudes en escribirnos al email alkuanimations@gmail.com.
