--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ section:after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #3455eb;
   padding: 10px;
   text-align: center;
   color: white;
@@ -79,9 +79,10 @@ Información personal
 </b>
 </p>
 <p>
-Alku Animations no recolecta ninguna clase de información personal como identificadores de anuncios de Google o Apple.
+Alku Animations no recolecta información como identificadores de anuncios de Google o Apple.
 Alku Animations no integra ningún SDK que permita publicitar contenido a sus usuarios, ni que permita analizar el uso de sus aplicaciones o que permita administrar cuentas.
 Alku Animations no recolecta información como dirección o direcciones ip del usuario.
+Alku Animations recolecta información del usuario como correo, nombre y ciudad (En caso de estar en Ecuador). Con el único fin de conctactar al usuario en caso de realizar alguna promoción externa. Alku Animations respeta la información proporcionada por los usuarios.
 </p>
 
 <p><b>
@@ -108,16 +109,12 @@ Seguridad
 </p>
 
 <p>
-La aplicación almacena localmente datos únicamente relacionados con el juego, no datos personales ni técnicos por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
+La aplicación almacena localmente datos únicamente relacionados con el juego. Los datos personales de ninguna manera están atados a la identidad del usuario como contraseñas por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
 </p>
   
 <p><b>
 SDK Partners
 </b>
-</p>
-
-<p>
-En está sección se declara que la aplicación utiliza el SDK de Facebook con el único fin de obtener las métricas de descargas realizadas a través de Facebook.
 </p>
 
 <p><b>
@@ -126,7 +123,7 @@ Cambios de esta política de privacidad
 </p>
 
 <p>
-Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 13/10/2020.
+Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 22/03/2023.
 </p>
 
 <p><b>
@@ -140,7 +137,7 @@ Si tienes alguna pregunta acerca de nuestra política de Privacidad no dudes en 
 </p>
 
 <footer>
-  <p>Alku Animations 2020</p>
+  <p>Alku Animations 2023</p>
 </footer>
 
 </body>
