--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ Información personal
 Alku Animations no recolecta información como identificadores de anuncios de Google o Apple.
 Alku Animations no integra ningún SDK que permita publicitar contenido a sus usuarios, ni que permita analizar el uso de sus aplicaciones o que permita administrar cuentas.
 Alku Animations no recolecta información como dirección o direcciones ip del usuario.
-Alku Animations recolecta información del usuario como correo, nombre y ciudad (En caso de estar en Ecuador). Con el único fin de conctactar al usuario en caso de realizar alguna promoción externa. Alku Animations respeta la información proporcionada por los usuarios.
+Alku Animations recolecta información del usuario como correo, nombre y ciudad (En caso de estar en Ecuador). Con el único fin de contactar al usuario en caso de realizar alguna promoción externa. Alku Animations respeta la información proporcionada por los usuarios.
+En caso de querer eliminar la información proporcionada en la aplicación escribir al correo alkuanimations@gmail.com.
 </p>
 
 <p><b>
@@ -137,7 +138,7 @@ Si tienes alguna pregunta acerca de nuestra política de Privacidad no dudes en 
 </p>
 
 <footer>
-  <p>Alku Animations 2023</p>
+  <p>Alku Animations 2025</p>
 </footer>
 
 </body>
